# Octocast

./: .gitignore  CMakeLists.txt  Makefile  mingw-toolchain.cmake  readme.md  run.sh
includes/SDL2_ttf-2.22.0/x86_64-w64-mingw32/lib/cmake/SDL2_ttf/: sdl2_ttf-config.cmake:Zone.Identifier
includes/program/: main.h
src/: main.cpp
src/program/: main.cpp
